Update ejecutarTodo.sh